Fixed a problem with coins name overlapping and going onto a new line

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -229,7 +229,7 @@ body{
 			flex-direction: row;
 			align-items: center;
 			column-gap: 10px;
-			min-width: 130px;
+			margin-right: 15px;
 			.cur_img {
 				img {
 					border-radius: 50%;
@@ -242,6 +242,7 @@ body{
 					font: normal normal 800 16px/22px Nunito;
 					letter-spacing: 0px;
 					color: #ffffff;
+					white-space: nowrap;
 				}
 				p {
 					margin: 0px;
